add: readme.md + update: swagger config
